# blog

./: compose.yaml
backend/: Dockerfile  auth.py  config.py  database.py  email_utils.py  main.py  models.py  populate_db.py  pyproject.toml  schemas.py
backend/routers/: posts.py  users.py
backend/templates/: account.html  home.html  layout.html  post.html
backend/templates/email/: password_reset.html
